2007-10-18  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/remote_fetcher.rb: Add platform to User-Agent.
	* lib/rubygems/commands/install_command.rb: Fix typo.  Debian bug
	443135 submitted by Reuben Thomas.

2007-10-17  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/commands/update_command.rb: Unset RUBYOPT when running
	setup.rb
	* setup.rb: Re-exec without RUBYOPT if it is set.  Fixes bug #14683
	submitted by Lyle Johnson.

2007-10-16  Daniel Berger  <djberg96@gmail.com>

	* lib/rubygems/indexer/abstract_index_builder.rb: The compress method
	now does a binary read to make MS Windows happy.

2007-10-16  Eric Hodel  <drbrain@segment7.net>

	* setup.rb: Installs bin stubs that warn when you try to use the old
	commands.  Simple mswin deprecation stubs by Luis Lavena.

2007-10-12  Eric Hodel  <drbrain@segment7.net>

	* setup.rb: Remove source caches on install.
	* doc/release_notes/rel_0_9_5.rdoc: Draft added.
	* lib/rubygems/rubygems_version.rb: 0.9.4.5 beta.

2007-10-10  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb: Fix small bug found by Alan C.
	Francis.

2007-10-09  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/dependency_installer.rb: Use install_dir so custom gem
	repos can be used.
	* lib/rubygems/specification.rb: Always set required attributes, even
	if they match the default.

2007-10-08  Ryan Davis  <ryan@wrath.local>

	* lib/rubygems.rb: Fixed require order so custom_require is
	last. Added HACK tag to remind Jim to release rake.
	* test/test_gem_source_index.rb: Fixed latest_specs' tests so
	failures were much more readable.
	* lib/rubygems/source_index.rb: Fixed latest_specs to deal with
	platforms appropriately. Returns array again.

2007-10-08  Eric Hodel  <drbrain@segment7.net>

	* lib/rubygems/config_file.rb: Boost bulk_threshold to 1000, Marshal
	format is smaller than yaml format quick index.
	* lib/rubygems/installer.rb: Make #shebang correctly rewrite env
	shebangs.